Fixed alignment issues for small devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,11 +57,6 @@ body {
     margin: 1em 0;
 }
 
-.about-text {
-    width: 75%;
-    margin: auto;
-    padding-top: 0.5em;
-}
 
 .about-section, .skills-section {
     margin: 2em 0;
@@ -73,8 +68,7 @@ body {
 }
 
 .about-icon {
-    width: 75%;
-    padding-top: 1em;
+    display: none;
 }
 
 .test {
@@ -136,7 +130,24 @@ h3 {
 }
 
 @media (min-width: 598px) {
-    
+    .about-icon {
+        width: 75%;
+        padding-top: 1em;
+        display: inline;
+    }
+
+    .second-skills, .second-course {
+        margin-top: 0;
+    }
+
+    .social-link a {
+        font-size: 1.5em;
+    }
+
+    .social-link {
+        height: 2.5em;
+        width: 2.5em;
+    }
     
 }
 
@@ -145,12 +156,22 @@ h3 {
         font-size: 48px;
     }
 
+    .second-skills {
+        margin-top: 5em;
+    }
+
+
     
     
 }
 
 
 @media (min-width: 992px) {
+    .about-text {
+        width: 75%;
+        margin: auto;
+        padding-top: 0.5em;
+    }
     
     
 }
